staging-v1.0.8 (wrapping up uat)

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
             "app/Helpers/ResponseHelper.php",
             "app/Helpers/MobileNetworkHelper.php",
             "app/Helpers/PaymentHelper.php",
-            "app/Helpers/SMSHelper.php"
+            "app/Helpers/SMSHelper.php",
+            "app/Helpers/PayoutHelper.php"
         ]
     },
     "autoload-dev": {
