--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.10.1",
-        "maatwebsite/excel": "^3.1"
+        "phpoffice/phpspreadsheet": "^5.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
